<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".CountryDetailActivity">

    <ImageView
        android:id="@+id/c_flag_image"
        android:layout_width="120dp"
        android:layout_height="80dp"
        android:layout_marginStart="146dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="146dp"
        android:layout_marginBottom="11dp"
        app:layout_constraintBottom_toTopOf="@+id/c_name_country"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_report_image" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="40dp"
        android:layout_height="30dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/active_cases"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/c_name_country" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="40dp"
        android:layout_height="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/total_cases"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="40dp"
        android:layout_height="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/daily_new_cases"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView9" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="40dp"
        android:layout_height="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="19dp"
        android:src="@drawable/total_death"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView10" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="40dp"
        android:layout_height="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/today_deaths"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView11" />

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="40dp"
        android:layout_height="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/total_recovered"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView12" />

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="40dp"
        android:layout_height="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/daily_recovered"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView13" />

    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="40dp"
        android:layout_height="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="19dp"
        android:src="@drawable/total_tests"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView14" />

    <TextView
        android:id="@+id/c_name_country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="162dp"
        android:layout_marginEnd="163dp"
        android:layout_marginBottom="34dp"
        android:text="countryName"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/cases_active"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/cases_active"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="85dp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/active_cases_title"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/c_name_country" />

    <TextView
        android:id="@+id/cases_total"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="85dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/total_cases_title"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageView9"
        app:layout_constraintTop_toBottomOf="@+id/cases_active" />

    <TextView
        android:id="@+id/cases_new"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="85dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/new_cases_title"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageView10"
        app:layout_constraintTop_toBottomOf="@+id/cases_total" />

    <TextView
        android:id="@+id/deaths_total"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="85dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/total_deaths_title"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageView11"
        app:layout_constraintTop_toBottomOf="@+id/cases_new" />

    <TextView
        android:id="@+id/deaths_new"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="85dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/new_deaths_title"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageView12"
        app:layout_constraintTop_toBottomOf="@+id/deaths_total" />

    <TextView
        android:id="@+id/recovered_total"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="85dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/total_recovered_title"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageView13"
        app:layout_constraintTop_toBottomOf="@+id/deaths_new" />

    <TextView
        android:id="@+id/recovered_new"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="85dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/new_recovered_title"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageView14"
        app:layout_constraintTop_toBottomOf="@+id/recovered_total" />

    <TextView
        android:id="@+id/tests_total"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="85dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/total_tests_title"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageView15"
        app:layout_constraintTop_toBottomOf="@+id/recovered_new" />

    <TextView
        android:id="@+id/c_active_cases_num"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="21dp"
        android:gravity="center"
        android:text="TextView"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/c_total_cases_num"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/c_name_country" />

    <TextView
        android:id="@+id/c_total_cases_num"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="15dp"
        android:gravity="center"
        android:text="TextView"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/c_active_cases_num" />

    <TextView
        android:id="@+id/c_new_cases_num"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="14dp"
        android:gravity="center"
        android:text="TextView"
        android:textAlignment="center"
        android:textColor="@color/yellow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/c_total_cases_num" />

    <TextView
        android:id="@+id/c_total_deaths_num"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:gravity="center"
        android:text="TextView"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/c_new_cases_num" />

    <TextView
        android:id="@+id/c_new_deaths_num"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="15dp"
        android:gravity="center"
        android:text="TextView"
        android:textAlignment="center"
        android:textColor="@color/red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/c_total_deaths_num" />

    <TextView
        android:id="@+id/c_total_recovered_num"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="15dp"
        android:gravity="center"
        android:text="TextView"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/c_new_deaths_num" />

    <TextView
        android:id="@+id/c_new_recovered_num"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="14dp"
        android:gravity="center"
        android:text="TextView"
        android:textAlignment="center"
        android:textColor="@color/green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/c_total_recovered_num" />

    <TextView
        android:id="@+id/c_total_tests_num"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="14dp"
        android:gravity="center"
        android:text="TextView"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/c_new_recovered_num" />

</androidx.constraintlayout.widget.ConstraintLayout>